# crossenv

./: CHANGELOG.md  README.rst  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
crossenv/: __init__.py  template.py  utils.py
crossenv/scripts/: _manylinux.py.tmpl  cross-expose.py.tmpl  distutils-sysconfig-patch.py.tmpl  importlib-machinery-patch.py.tmpl  importlib-metadata-patch.py.tmpl  os-patch.py.tmpl  packaging-tags-patch.py.tmpl  pip-_vendor-distlib-scripts-patch.py.tmpl  pkg_resources-patch.py.tmpl  platform-patch.py.tmpl  pywrapper.py.tmpl  site.py.tmpl  sys-patch.py.tmpl  sysconfig-patch.py.tmpl
docs/: conf.py  quickstart.rst  requirements.txt
tests/: conftest.py  resources.py  test_basic.py  test_compiler.py  test_environment.py  test_resources.py  test_usage.py  testutils.py
tests/sources/hello/: setup.py
