[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "crossenv"
description = "A cross-compiling tool for Python extension modules"
readme = { file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.6"
license = { file = "LICENSE.txt" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "wheel"
]

[[project.authors]]
name = "Benjamin Fogle"
email = "benfogle@gmail.com"

[[project.maintainers]]
name = "Dustin Spicuzza"
email = "dustin@virtualroadside.com"

[project.urls]
Homepage = "https://github.com/robotpy/crossenv"

[tool.hatch.version]
path = "crossenv/__init__.py"


[tool.black]
include = '''
(
    ^/crossenv/scripts/.*\.py\.tmpl$
    | .*\.py
)
'''
